--- a/public/style_files/w3.css
+++ b/public/style_files/w3.css
@@ -5,7 +5,7 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    padding-top: 10px; /* Location of the box */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -45,8 +45,9 @@ html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 .close {
     color: white;
     float: right;
-    font-size: 28px;
+    font-size: 100px;
     font-weight: bold;
+    margin: 0px 0px 30px 30px;
 }
 
 .close:hover,
